--- a/docker/manifest.tmpl
+++ b/docker/manifest.tmpl
@@ -24,8 +24,8 @@ manifests:
       os: linux
       variant: v7
   -
-    image: plugins/base:{{#if build.tag}}{{trimPrefix build.tag "v"}}-{{/if}}windows-amd64
+    image: plugins/base:{{#if build.tag}}{{trimPrefix build.tag "v"}}-{{/if}}windows-1809
     platform:
       architecture: amd64
       os: windows
-      variant: 1809
+      version: 1809
