--- a/docker/manifest.tmpl
+++ b/docker/manifest.tmpl
@@ -24,13 +24,13 @@ manifests:
       os: linux
       variant: v7
   -
-    image: plugins/base:{{#if build.tag}}{{trimPrefix build.tag "v"}}-{{/if}}windows-1803
+    image: plugins/base:{{#if build.tag}}{{trimPrefix build.tag "v"}}-{{/if}}windows-1803-amd64
     platform:
       architecture: amd64
       os: windows
       version: 1803
   -
-    image: plugins/base:{{#if build.tag}}{{trimPrefix build.tag "v"}}-{{/if}}windows-1809
+    image: plugins/base:{{#if build.tag}}{{trimPrefix build.tag "v"}}-{{/if}}windows-1809-amd64
     platform:
       architecture: amd64
       os: windows
