--- a/docker/manifest.tmpl
+++ b/docker/manifest.tmpl
@@ -6,32 +6,32 @@ tags:
 {{/each}}
 {{/if}}
 manifests:
-  -
-    image: plugins/base:{{#if build.tag}}{{trimPrefix build.tag "v"}}-{{/if}}linux-amd64
+  - image: plugins/base:{{#if build.tag}}{{trimPrefix build.tag "v"}}-{{/if}}linux-amd64
     platform:
       architecture: amd64
       os: linux
-  -
-    image: plugins/base:{{#if build.tag}}{{trimPrefix build.tag "v"}}-{{/if}}linux-arm64
+  - image: plugins/base:{{#if build.tag}}{{trimPrefix build.tag "v"}}-{{/if}}linux-arm64
     platform:
       architecture: arm64
       os: linux
       variant: v8
-  -
-    image: plugins/base:{{#if build.tag}}{{trimPrefix build.tag "v"}}-{{/if}}linux-arm
+  - image: plugins/base:{{#if build.tag}}{{trimPrefix build.tag "v"}}-{{/if}}linux-arm
     platform:
       architecture: arm
       os: linux
       variant: v7
-  -
-    image: plugins/base:{{#if build.tag}}{{trimPrefix build.tag "v"}}-{{/if}}windows-1803-amd64
+  - image: plugins/base:{{#if build.tag}}{{trimPrefix build.tag "v"}}-{{/if}}windows-1903-amd64
     platform:
       architecture: amd64
       os: windows
-      version: 1803
-  -
-    image: plugins/base:{{#if build.tag}}{{trimPrefix build.tag "v"}}-{{/if}}windows-1809-amd64
+      version: 1903
+  - image: plugins/base:{{#if build.tag}}{{trimPrefix build.tag "v"}}-{{/if}}windows-1809-amd64
     platform:
       architecture: amd64
       os: windows
       version: 1809
+  - image: plugins/base:{{#if build.tag}}{{trimPrefix build.tag "v"}}-{{/if}}windows-1803-amd64
+    platform:
+      architecture: amd64
+      os: windows
+      version: 1803
