--- a/docker/manifest.tmpl
+++ b/docker/manifest.tmpl
@@ -20,6 +20,11 @@ manifests:
       architecture: arm
       os: linux
       variant: v7
+  - image: plugins/base:{{#if build.tag}}{{trimPrefix build.tag "v"}}-{{/if}}windows-1909-amd64
+    platform:
+      architecture: amd64
+      os: windows
+      version: 1909
   - image: plugins/base:{{#if build.tag}}{{trimPrefix build.tag "v"}}-{{/if}}windows-1903-amd64
     platform:
       architecture: amd64
