--- a/docker/manifest.tmpl
+++ b/docker/manifest.tmpl
@@ -40,3 +40,8 @@ manifests:
       architecture: amd64
       os: windows
       version: 1809
+  - image: plugins/base:{{#if build.tag}}{{trimPrefix build.tag "v"}}-{{/if}}windows-ltsc2022-amd64
+    platform:
+      architecture: amd64
+      os: windows
+      version: ltsc2022
